<resources>
    <string name="app_name">Enliven</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="map_fragment_name">Карта</string>
    <string name="progress_fragment_name">Прогресс</string>
    <string name="rating_fragment_name">Рейтинг</string>
    <string name="achievements_fragment_name">Достижения</string>
    <string name="events_fragment_name">События</string>
    <string name="training_fragment_name">Обучение</string>
    <string name="settings_fragment_name">Настройки</string>
    <string name="about_fragment_name">О приложении</string>
    <string name="feedback_header_name">Обратная связь</string>
    <string name="share_fragment_name">Поделиться</string>
    <string name="console_fragment_name">Консоль</string>
    <string name="feedback_fragment_name">Отправить отзыв</string>
    <string name="gratitude_fragment_name">Особая благодарность</string>
    <string name="progress_dialog_message">Подождите…</string>
    <string name="email_sending_error_message">Увы, но у нас закончилась бумага для писем. Приходите позже</string>
    <string name="authentication_error_message">Ваш аккаунт временно отключен. Попробуйте войти позже, либо обратитесь в службу поддержки</string>
    <string name="google_play_services_error_message">Произошла ошибка сервисов Google Play</string>
    <string name="title_activity_maps">Map</string>
    <string name="grant_access_button_text">Начнем</string>
    <string name="news_fragment_name">Новости</string>
    <string name="events_card_image">events card image</string>
    <string name="progress_dialog_title">Авторизация…</string>
    <string name="description">description</string>
    <string name="achieves_points_loading_text">Подсчитываем Ваши очки…</string>
    <string name="profile_fragment_name">Профиль</string>
    <string name="title_activity_marker_info">MarkerInfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_marker_info">EventMarkerInfoActivity</string>
    <string name="title_activity_achievement_info">AchievementInfoActivity</string>
    <string name="achieve_1_details">Это нежный фрукт с толстой фиолетовой кожей и круглыми листиками у черенка. Белая мякоть напоминает очищенный апельсин и имеет сложноописываемый кисло-сладкий вкус. Внутри мангостина — шесть или более мягких белых долек: чем их больше, тем меньше семян. Чтобы выбрать правильный мангостин, если Вы захотите его попробовать, нужно взять в руку самые фиолетовые плоды и несильно сдавить: кожура должна быть не жесткой, но и не очень мягкой. Если кожа проминается неравномерно в разных местах, плод уже лежалый. Вскрыть плод можно, проделав отверстие в кожуре с помощью ножа и пальцев. Не пытайтесь взять руками дольки: мякоть такая нежная, что вы ее просто раздавите.</string>
    <string name="achieve_2_details">Плоды дуриана — «фрукта со вкусом рая и запахом ада» — неправильной овальной формы, с очень острыми колючками. Под кожицей — вязкая мякоть с уникальным вкусом. У «короля фруктов» резкий аммониевый запах, насколько сильный, что дуриан запрещают перевозить в самолетах и проносить в номера отелей, о чем свидетельствует соответствующие плакаты и таблички у входа. Самый пахучий и самый экзотический фрукт Таиланда очень богат витаминами и питательными веществами.</string>
    <string name="achieve_3_details">Сочные и ароматные плоды по форме напоминают дыню, в длину достигают 25 сантиметров, в ширину — 12 сантиметров. Кожица немного твердая, красно-коричневая. Мякоть белая, кисловато-сладкая, семена располагаются в пяти гнездах. Ее едят в свежем виде и используют для приготовления соков, йогуртов, ликеров, джемов, конфет и шоколада. Считается, что самый вкусный купуасу тот, что сам упал на землю.</string>
    <string name="achieve_4_details">Тамаринд, или индийский финик, относится к семейству бобовых, но его употребляют и как фрукт. Изогнутые плоды длиной до 15 сантиметров с коричневой кожурой и кисло-сладкой мякотью. Она используется как специя, входит в состав знаменитого вустерского соуса и применяется для приготовления закусок, десертов и различных напитков. Из спелого сушеного тамаринда готовят сладости. В качестве сувенира туристы везут на родину соус к мясу и сироп для коктейлей на основе индийского финика.</string>
    <string name="achieve_5_details">Другие названия — рука Будды, цедрат, корсиканский лимон. За внешней оригинальностью скрывается тривиальное содержание: продолговатые плоды — почти сплошная кожура, напоминающая по вкусу лимон, а по запаху — фиалку. Его можно разве что использовать для приготовления компотов, желе и цукатов. Часто руку Будды сажают в горшок как декоративное растение.</string>
    <string name="achieve_6_details">Также — джаботикаба, бразильское виноградное дерево. Плоды, на вид как виноградины или ягоды смородины, растут гроздьями на стволах и основных ветках. Кожица горькая. Из мякоти делают соки, алкогольные напитки, желе, мармелад.</string>
    <string name="achieve_7_details">Рамбутан — один из самых знаменитых тропических фруктов, который отличается «повышенной волосатостью». Под красной ворсистой кожицей скрывается белая полупрозрачная мякоть со сладким вкусом. Чтобы до нее добраться, нужно «скрутить» плод посередине. Плоды едят в свежем виде или консервируют с сахаром. Сырые семена ядовиты, а поджаренные безвредны. При выборе нужно руководствоваться цветом: чем розовее, тем лучше.</string>
    <string name="achieve_8_details">Другие названия — лам-яй, «глаз дракона». Это круглый, коричневый фрукт, похожий на маленький картофель. Очень сладкий и сочный, в нем много калорий. Легко снимаемая кожица покрывает прозрачно-белую или розовую мякоть, близкую по консистенции к желе. В сердцевине плода расположена большая черная косточка. Лонган полезен для здоровья, но не стоит съедать сразу много: это приведет к повышению температуры тела.</string>
    <string name="achieve_9_details">Другие названия — «тропические звезды», старфрут, камрак. Ее желтые или зеленые плоды размерами и формой напоминают сладкий перец. На срезе же имеют форму звезды — отсюда и название. Зрелые плоды — сочные, с легким цветочным вкусом, не очень сладкие. В незрелых фруктах много витамина С. Хороши в салатах и коктейлях, чистить их не нужно.</string>
    <string name="achieve_10_details">Другие названия — питахайя, лун янь, «драконий фрукт», «драгонфрут». Это плод кактуса из рода Hylocereus (сладкая питайя). Очень красив внешне: ярко-розовый, размером с крупное яблоко, немного вытянутой формы. Кожура покрыта крупной чешуей, края зеленого цвета. Если удалить кожу (как в случае с апельсином), внутри можно увидеть плотную белую, красную или фиолетовую мякоть со множеством мелких косточек. Хорош во фруктовых коктейлях в сочетании с лаймом.</string>
    <string name="achieve_11_details">Другие названия — гуйава, гуайява. Круглый, продолговатый или грушевидный фрукт (от 4 до 15 сантиметров) с белой мякотью и желтыми твердыми семечками. Съедобен от кожицы до косточек. При созревании плод желтеет, и его употребляют в пищу с кожурой — для улучшения пищеварения и стимуляции работы сердца. Недозревшим его едят как зеленое манго, посыпая специями и солью.</string>
    <string name="achieve_12_details">Другие названия — розовое яблоко, малабарская слива. По форме напоминает сладкий перец. Бывает как розового, так и светло-зеленого цвета. Мякоть белая, плотная. Чистить его не надо, косточек нет. Вкус особо ничем не выделяется и напоминает больше слегка подслащенную воду. Зато в охлажденном виде эти тропические фрукты хорошо утоляют жажду.</string>
    <string name="achieve_13_details">Другие названия — сала, салака, ракум, «змеиный фрукт». Круглые или продолговатые небольшие плоды растут гроздьями. Цвет — красный или коричневый. Кожура покрыта мелкими колючками и легко снимается при помощи ножа. Внутри три сладких сегмента. Вкус насыщенный, кисло-сладкий, напоминает то ли хурму, то ли грушу.</string>
    <string name="achieve_14_details">Другие названия — древесное яблоко, каменное яблоко, айва бенгальская. При созревании серо-зеленый плод приобретает желтый или коричневый цвет. Кожура плотная, точно у ореха, и без молотка добраться до нее невозможно, поэтому на рынках чаще всего продается собственно мякоть. Она желтая, с ворсистыми семенами, разделена на сегменты. Баиль едят в свежем или сушеном виде. Из него также делают чай и напиток шарбат. Фрукт оказывает раздражающее воздействие на горло, вызывая першение, поэтому первый опыт взаимодействия с баилем может оказаться неудачным.</string>
    <string name="achieve_15_details">Также — рогатая дыня, африканский огурец, рогатый огурец. При созревании оболочка покрывается желтыми шипами, а мякоть приобретает насыщенный зеленый цвет. Продолговатые плоды не чистят, а разрезают, как дыню или арбуз. Вкус — помесь банана, дыни, огурца, киви и авокадо. Иными словами, его можно добавлять и в сладкие, и в острые блюда, а также мариновать. Незрелые плоды тоже съедобны.</string>
</resources>